dodanie obługi będu w przypadku nie zanalezienia pliku

--- a/jsonConverter/jsonConverter/Properties/launchSettings.json
+++ b/jsonConverter/jsonConverter/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "jsonConverter": {
       "commandName": "Project",
-      "commandLineArgs": ".\\export_xyz „C:\\Users\\Jan\\Desktop\\csvData.csv” json\r\n"
+      "commandLineArgs": ".\\dane.csv „C:\\Users\\Jan\\Desktop\\csvData.csv” json\r\n"
     }
   }
 }
